# TextEdit

./: .buildconfig  .gitignore  COPYING  Cargo.toml  README.md  com.bernardigiri.TextEditor.json  meson.build
data/: com.bernardigiri.TextEditor.appdata.xml.in  com.bernardigiri.TextEditor.desktop.in  com.bernardigiri.TextEditor.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.rs  main.rs  meson.build  my_gtk_text_editor.gresource.xml  window.ui
src/components/: about_dialog.rs  application.rs  body_text.rs  file_dialog.rs  menu.rs  mod.rs  status_bar.rs  util.rs
