[package]
name = "textedit"
version = "0.1.0"
edition = "2018"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.gtk]
version = "0.8.1"
features = ["v3_24"]

[dependencies.gdk]
version = "0.12.1"
features = ["v3_24"]

[dependencies.gio]
version = "0.8.1"
features = ["v2_60"]

[dependencies.glib]
version = "0.9.2"
features = ["v2_60"]

[dependencies.gettext-rs]
version = "0.4.4"
features = ["gettext-system"]
